HUDF-528 fixed html spacing + show new messages for existing notifications @seanrose83

--- a/FJSHUD/app/styles/firefox.less
+++ b/FJSHUD/app/styles/firefox.less
@@ -275,7 +275,7 @@
      
      &:not(.firstsection){
        top: -10px;
-       margin-bottom: -12px;
+       margin-bottom: -10px;
      }     
   }
   
